--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p class="apresentacao_paragrafo">Esse programa e apenas um teste para mostrar se eu estou aprendendo alguma coisa de <strong>HTML e CSS</strong> ou se ainda preciso estudar muito.</p>
             <a class="botao" href="https://www.google.com/search?q=urso+grande+e+peludo+pelado&sca_esv=601b0517c7361365&rlz=1C1VDKB_pt-PTBR1083BR1083&udm=2&biw=1920&bih=957&sxsrf=AHTn8zoCtHj3K2GXO8-uSTAN9lSKJFEBuQ%3A1746412650844&ei=aiQYaIGmM4LJ1sQPw6L2QA&ved=0ahUKEwiBg72NpouNAxWCpJUCHUORHQgQ4dUDCBE&uact=5&oq=urso+grande+e+peludo+pelado&gs_lp=EgNpbWciG3Vyc28gZ3JhbmRlIGUgcGVsdWRvIHBlbGFkb0jlCVCSBFiBCXABeACQAQCYAXCgAYUFqgEDMC42uAEDyAEA-AEBmAICoAJywgIHECMYJxjJAsICBBAAGB6YAwCIBgGSBwMxLjGgB60CsgcDMC4xuAdw&sclient=img"> CLIQUE  </a>
          </section>
-        <img class="foto" src="WIN_20250422_14_37_18_Pro.jpg" alt="FOTO ALEATORIO DO ALENCAR">
+        <img class="foto" src="alencar.jpg" alt="FOTO ALEATORIO DO ALENCAR">
     </main>
     
     <footer></footer>    
